# exchange-backend

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.prod  Doxyfile  README.md  TODO  config.hpp.in  config.json  fix_config.xml  fix_protocol.cfg  main.cpp  main_config.yaml  server_test.sh  settings.cfg  vcpkg.json
.github/workflows/: cpp_tests.yml
apps/: exchange_server.cpp
apps/exchange-server/: CMakeLists.txt  exchange_main.cpp  exchange_server.cpp
docs/: api__routing_8cpp.html  api__routing_8cpp__incl.map  api__routing_8cpp__incl.md5  api__routing_8hpp.html  api__routing_8hpp__dep__incl.md5  api__routing_8hpp__incl.map  api__routing_8hpp__incl.md5  api__routing_8hpp_source.html  classexchange_1_1Exchange.html  classexchange_1_1MatchingEngine-members.html  classexchange_1_1MatchingEngine.html  classexchange_1_1RingBuffer.html  classexchange_1_1Sequencer.html  data__conversion_8cpp.html  data__conversion_8cpp__incl.map  data__conversion_8cpp__incl.md5  data__conversion_8hpp.html  data__conversion_8hpp__dep__incl.md5  data__conversion_8hpp__incl.map  data__conversion_8hpp__incl.md5  data__conversion_8hpp_source.html  data__validation_8cpp.html  data__validation_8cpp__incl.map  data__validation_8cpp__incl.md5  data__validation_8hpp.html  data__validation_8hpp__dep__incl.map  data__validation_8hpp__dep__incl.md5  data__validation_8hpp__incl.map  data__validation_8hpp__incl.md5  data__validation_8hpp_source.html  dir_000000_000009.html  dir_000002_000000.html  dir_184883fef5b44234ca8a059e334d5db5.html  dir_184883fef5b44234ca8a059e334d5db5_dep.map  dir_184883fef5b44234ca8a059e334d5db5_dep.md5  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a_dep.map  dir_260dbcc9b6a505e2fcddf4a593202b7d.html  dir_260dbcc9b6a505e2fcddf4a593202b7d_dep.map  dir_260dbcc9b6a505e2fcddf4a593202b7d_dep.md5  (+59 more)
docs/api/: annotated.html  api__routing_8cpp.html  api__routing_8cpp__incl.map  api__routing_8cpp__incl.md5  api__routing_8hpp__dep__incl.map  api__routing_8hpp_source.html  classes.html  classexchange_1_1Exchange-members.html  classexchange_1_1RingBuffer-members.html  classexchange_1_1Sequencer-members.html  data__conversion_8cpp.html  data__conversion_8cpp__incl.map  data__conversion_8hpp.html  data__conversion_8hpp__dep__incl.map  data__validation_8cpp__incl.md5  dir_000001_000004.html  dir_000002_000007.html  dir_000002_000009.html  dir_000003_000004.html  dir_000005_000009.html  dir_000006_000004.html  dir_000007_000009.html  dir_000008_000004.html  dir_184883fef5b44234ca8a059e334d5db5_dep.md5  dir_2052808828190f934b76e979ee65af8a_dep.md5  dir_260dbcc9b6a505e2fcddf4a593202b7d.html  dir_260dbcc9b6a505e2fcddf4a593202b7d_dep.md5  dir_2cd6a2bcca0145cec01845e0b0fe267c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_a7f531b1c37460085cedd304cb8df01d_dep.map  dir_c4ef55146bcfca1a1d97051c7b1cad6c.html  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d8e2307e1aa1272e7ab925ee355f2dd0.html  dir_d8e2307e1aa1272e7ab925ee355f2dd0_dep.map  dir_d8e2307e1aa1272e7ab925ee355f2dd0_dep.md5  dir_e169475cd983aa4a046785404be38c6c.html  dir_e169475cd983aa4a046785404be38c6c_dep.md5  exchange_8cpp.html  (+25 more)
docs/html/: annotated.html  classes.html  globals.html  menudata.js  order_8hpp.html  order_8hpp__incl.map  order_8hpp_source.html  structexchange_1_1Order-members.html  structexchange_1_1Order.html
docs/latex/: annotated.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  namespaceexchange.tex  namespaces.tex  order_8hpp.tex  order_8hpp__incl.md5  order_8hpp_source.tex  refman.tex  structexchange_1_1Order.tex
docs/search/: all_12.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_a.js  namespaces_0.js  searchdata.js  variables_6.js
exchange-gateway-store/: FIX.4.2-EXCHANGE-*.session  FIX.4.2-EXCHANGE-TESTCLIENT.body  FIX.4.2-EXCHANGE-TESTCLIENT.header  FIX.4.2-EXCHANGE-TESTCLIENT.session
include/: order.hpp  pch.hpp
include/config-parser/: yaml_parser.hpp
include/config-parsing/: yaml_parser.hpp
include/engine/: matching_engine.hpp
include/exchange/: exchange.hpp  exchange_controller.hpp
include/exchange-gateway/: gateway.hpp
include/network-inbound/: api_routing.hpp  data_conversion.hpp  data_validation.hpp
include/network-input/: api_routing.hpp  data_conversion.hpp  data_validation.hpp
include/network-manager/: network_manager.hpp
include/network-outbound/: outbound_private.hpp  outbound_public.hpp
mock_json/: curl_order_example.txt  demo_client_order_input.json
scripts/: build.sh  build_dev.sh  build_prod.sh  configure_dev.sh  gateway_test.py  run.sh  run_dev.sh  run_prod.sh  server_test.sh  setup.sh  shutdown.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/config-parser/: CMakeLists.txt  yaml_parser.cpp
src/engine/: CMakeLists.txt  matching_engine.cpp
src/exchange/: CMakeLists.txt  exchange.cpp  exchange_controller.cpp
src/exchange-gateway/: CMakeLists.txt  gateway.cpp
src/network-inbound/: CMakeLists.txt  api_routing.cpp  data_conversion.cpp  data_validation.cpp
src/network-input/: api_routing.cpp  data_conversion.cpp  data_validation.cpp
src/network-manager/: CMakeLists.txt  network_manager.cpp
src/network-outbound/: CMakeLists.txt  outbound_private.cpp  outbound_public.cpp
src/sequencer/: CMakeLists.txt  sequence_number.cpp  sequencer.cpp
src/shared/: CMakeLists.txt  ring_buffer.cpp
templates/: config.hpp.in  run.sh.in  ticker.hpp.in
tests/network-inbound/: CMakeLists.txt  api_routing_test.cpp  data_conversion_test.cpp
tests/perf/network-inbound/: CMakeLists.txt  network_inbound_performance_test.cpp
tests/unit/network-inbound/: CMakeLists.txt  api_routing_test.cpp  data_conversion_test.cpp  data_validation_test.cpp
(+35 files in other folders)
